WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91646
Fix up old name in RuleSet::addRulesFromSheet
https://bugs.webkit.org/show_bug.cgi?id=91646
Summary
Fix up old name in RuleSet::addRulesFromSheet
Dimitri Glazkov (Google)
Reported
2012-07-18 11:37:09 PDT
Fix up old name in RuleSet::addRulesFromSheet
Attachments
Patch
(6.49 KB, patch)
2012-07-18 11:38 PDT
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2012-07-18 11:38:23 PDT
Created
attachment 153059
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2012-07-18 11:39:14 PDT
Was reading code, and got flummoxed by "styleSelector" name. Seems like a good idea to make it consistent with the rename.
WebKit Review Bot
Comment 3
2012-07-18 13:10:10 PDT
Comment on
attachment 153059
[details]
Patch Clearing flags on attachment: 153059 Committed
r123006
: <
http://trac.webkit.org/changeset/123006
>
WebKit Review Bot
Comment 4
2012-07-18 13:10:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug