Fix up old name in RuleSet::addRulesFromSheet https://bugs.webkit.org/show_bug.cgi?id=91646

Reviewed by Andreas Kling.

Simple parameter rename, no change in functionality.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList): Renamed styleSelector to resolver to reflect recent rename of the parameter type.


Canonical link: https://commits.webkit.org/109464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123006 268f45cc-cd09-0410-ab3c-d52691b4dbfc